--- a/squad-diary/src/App.css
+++ b/squad-diary/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+h1 {
+  font-variant: all-petite-caps;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
