--- a/squad-diary/src/App.css
+++ b/squad-diary/src/App.css
@@ -1,8 +1,19 @@
 .App {
   text-align: center;
 }
-h1 {
+h1 span {
   font-variant: all-petite-caps;
+  margin-bottom: 0.5rem;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.2;
+  color: white;
+  background-color: #6a7075;
+  opacity: 0.8;
+  border-radius: 10px;
+  text-align: center;
+  font-weight: bold;
+  padding: 10px;
 }
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
