--- a/squad-diary/src/index.css
+++ b/squad-diary/src/index.css
@@ -2,10 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url('./assets/background-img.png');
+  background-image: url("./assets/background-img.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
-
-
