--- a/squad-diary/src/App.css
+++ b/squad-diary/src/App.css
@@ -14,7 +14,12 @@ h1 span {
   text-align: center;
   font-weight: bold;
   padding: 10px;
+  
 }
+h1 {
+  margin-bottom: 50px;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -49,8 +54,8 @@ h1 span {
 );
 
 .container {
-  max-width: 800px;
-  margin: 10px auto;
+  /* max-width: 800px; */
+  /* margin: 10px auto; */
 }
 
 .text-center {
