--- a/squad-diary/src/App.css
+++ b/squad-diary/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
 }
-h1 span {
+h1 span,
+h4 span {
   font-variant: all-petite-caps;
   margin-bottom: 0.5rem;
   font-family: inherit;
@@ -18,6 +19,19 @@ h1 span {
 h1 {
   margin-bottom: 50px;
   text-align: center;
+}
+h4 {
+  text-align: center;
+  font-variant: small-caps;
+  font-family: fantasy;
+  color: #1a1720;
+  font-weight: 900;
+  font-size: 40px;
+}
+.text {
+  font-family: fantasy;
+  font-variant: all-petite-caps;
+  font-weight: 900;
 }
 
 .App-logo {
